--- a/boilerplates/bootstrap3/templates/aldryn_newsblog/includes/article.html
+++ b/boilerplates/bootstrap3/templates/aldryn_newsblog/includes/article.html
@@ -51,7 +51,17 @@
     {% if not detail_view %}
         <div class="row">
             <div class="col-xs-12 bottom-bar">
-                <div class="sm-buttons"><img src="{% static 'img/social-media-buttons.jpg' %}"></div>
+                <div class="sm-buttons">
+                    <a href="https://www.instagram.com/rawvana" target="_blank"><img src="{% static 'img/social-media-buttons/icon-instagram.png' %}"></a>
+                   <a href="https://www.facebook.com/rawvana" target="_blank"><img src="{% static 'img/social-media-buttons/icon-facebook.png' %}"></a>
+                   {% get_current_language as LANGUAGE_CODE %}
+                   {% if LANGUAGE_CODE == 'es' %}
+                    <a href="https://www.youtube.com/user/officialrawvana" target="_blank">
+                    {% else %}
+                    <a href="https://www.youtube.com/user/rawvanaeng" target="_blank">
+                    {% endif %}
+                    <img src="{% static 'img/social-media-buttons/icon-youtube.png' %}"></a>
+                </div>
                 <div class="read-more">
                     <a href="{% namespace_url 'article-detail' article.slug namespace=namespace default='' %}">READ MORE </a>
                 </div>
